<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Streaming App</string>
    <string name="developer">Developed by Analysis Group</string>
    <string name="welcome">Welcome </string>

    <!--  Login  -->
    <string name="loginTitle">Let\'s log in</string>
    <string name="loginSubtitle">Welcome back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="loginAccount">You do not have an account?</string>
    <string name="loginRegister">Sign up</string>
    <string name="loginMessage">Logging in, please wait…</string>
    <string name="loginSuccess">Login successfully</string>
    <string name="loginMessageError">Check if the email or password is correct</string>

    <!--  Register Activity  -->
    <string name="registerBarTitle">Create an account</string>
    <string name="registerTitle">Join our platform</string>
    <string name="registerSubtitle">Create your free account</string>
    <string name="username">Username</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="birthday">Date of birth</string>
    <string name="createAccount">Create Account</string>
    <string name="required">*Required</string>
    <string name="registerMessage">Registering, please wait…</string>
    <string name="registerSuccess">Successful registration</string>
    <string name="registerKeyError">Your stream key could not be created</string>
    <string name="registerDateLabel">"dd/mm/yyyy"</string>

    <!-- Error messages for Login and Register -->
    <string name="errorServer">An error has occurred…</string>
    <string name="errorEmptyField">All fields must be filled</string>
    <string name="errorInvalidEmail">Invalid email…</string>
    <string name="errorInvalidPassword">Password must contain at least six characters</string>

    <!--  Main Activity  -->
    <string name="mainTitle">Discover!</string>

    <!--  Item Stream  -->
    <string name="streamTitle">Example title</string>
    <string name="usernameHolder">Username</string>
    <string name="views">1000</string>
    <string name="descriptionThumbnail">Thumbnail for live stream</string>
    <string name="descriptionUserProfilePic">User profile picture</string>

    <!--  menu main bottom  -->
    <string name="home">Lives</string>
    <string name="live">Transmit</string>
    <string name="profile">Profile</string>

    <!--  LiveFragment  -->
    <string name="createLiveTitle">Create a live stream</string>
    <string name="setTitleLive">Add a title that describes the live stream</string>
    <string name="titleLiveHint">Title</string>
    <string name="setDescriptionLive">Tell users about your live stream</string>
    <string name="descriptionLiveHint">Description</string>
    <string name="readyBtn">Ready</string>

    <!--  ProfileFragment  -->
    <string name="profileTitle">Profile</string>
    <string name="profileUIDTxt">UID: </string>
    <string name="profileUID"> -- </string>
    <string name="profileNameTxt">Name: </string>
    <string name="profileName"> -- </string>
    <string name="profileLastNameTxt">Last name: </string>
    <string name="profileLastName"> -- </string>
    <string name="profileEmailTxt">Email: </string>
    <string name="profileEmail"> -- </string>
    <string name="profileAgeTxt">Age: </string>
    <string name="profileAge"> -- </string>
    <string name="streamKeyTxt">Transmission key: </string>
    <string name="streamKey"> -- </string>
    <string name="btnKey">Show</string>
    <string name="btnKeyShow">Hide</string>
    <string name="optionsAlert">Change profile picture</string>
    <string name="titleAlert">Choose an option</string>
    <string name="optionCamera">Camera</string>
    <string name="optionGallery">Gallery</string>
    <string name="secondTitleAlert">Select image from:</string>
    <string name="progressTitleUpload">Processing</string>
    <string name="progressMsgUpload">Image is changing, please wait…</string>
    <string name="cancellationMsg">Canceled by user</string>
    <string name="deniedPermission">Permission denied</string>
    <string name="imageUpdated">Image Updated</string>
    <string name="logoutMsg">Logout Successfully</string>
    <string name="copyKey">Copied to clipboard</string>

    <!--  LiveVideoPlayer -->
    <string name="rewindDescription">Rewind button</string>
    <string name="playDescription">Play button</string>
    <string name="pauseDescription">Pause button</string>
    <string name="forwardDescription">Forward button</string>
    <string name="fullscreenDescription">Fullscreen button</string>

    <string name="player_position"> -- </string>
    <string name="player_slash">/</string>
    <string name="player_duration">00:00</string>
    <string name="retry">Retry</string>
    <string name="exampleName">stream name (add live=1 if it is live e.g. test live=1)</string>

    <string name="storage_permission_denied">Permission to access storage was denied</string>
    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>
    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>
    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>
    <string name="error_generic">Playback failed</string>

    <!--  LiveVideoBroadcaster  -->
    <string name="settingsButton">Settings Button</string>
    <string name="switchCameraButton">Switch camera</string>
    <string name="toggleMicButton">Toggle Mute Mic Button</string>
    <string name="chatButton">Show the chat</string>

    <string name="stream_name"> -- </string>
    <string name="start_broadcasting">Start stream</string>
    <string name="live_indicator">on-air</string>
    <string name="stop_broadcasting">Stop</string>
    <string name="permission">Permission</string>
    <string name="broadcast_connection_lost">Connection to media server is lost</string>
    <string name="app_doesnot_work_without_permissions">App does not work without permissions. Please give Camera and Record Audio permission on app settings</string>
    <string name="stream_not_started">Failed to start. Please check server url and security credentials.</string>
    <string name="streaming_not_finished">Your previous broadcast still sends packets due to slow internet speed</string>
    <string name="oopps_shouldnt_happen">Oopps this shouldn\'t be happened. Please let the library developer this status</string>

    <string name="logout">Logout</string>

    <!--  Chat Fragment  -->
    <string name="messageHint">Type something…</string>
    <string name="sendButtonDescription">This button sends your message</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>