<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#333333">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/exo_rew"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/rewindDescription"
            android:src="@drawable/replay_ico" />

        <ImageView
            android:id="@+id/exo_play"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/playDescription"
            android:src="@drawable/play_ico" />

        <ImageView
            android:id="@+id/exo_pause"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/pauseDescription"
            android:src="@drawable/pause_ico" />

        <ImageView
            android:id="@+id/exo_ffwd"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/forwardDescription"
            android:src="@drawable/forward_ico" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:gravity="bottom">

            <TextView
                android:id="@+id/exo_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_position"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_slash"
                android:textColor="#CBCDC8"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"/>

            <TextView
                android:id="@+id/exo_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/player_duration"
                android:textColor="#CBCDC8"/>

            <ImageView
                android:id="@+id/btn_fullscreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/fullscreen_ico"
                android:contentDescription="@string/fullscreenDescription" />

        </LinearLayout>

        <com.google.android.exoplayer2.ui.DefaultTimeBar
            android:id="@+id/exo_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:unplayed_color="#45424E"
            app:buffered_color="#95989F"
            app:played_color="#FF0000" />

    </LinearLayout>

</RelativeLayout>